--- a/regression.html
+++ b/regression.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script type="text/javascript" src="jquery-3.1.1.min.js"></script>  
 <script type="text/javascript" src="d3.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="chart.js"></script>
 <style>
@@ -39,7 +40,13 @@ input[type="range"]:after {
 <div id="graph"></div>
 <script>
 var values=[14,9,10,11.5,0,12.5,16,8.5,3.5,8,12,14.5,1.5,13,14,13,2,8,13.5,8.5,12,8,3.5,11,8,14,15,8,12,10,11,6,13,1,8.5,10.5,13,9,8,14,11,1.5,12,2.5,9,6,10.5,16,9.5,12.5,8,2,20,5.5];
-var test=new Graph('graph',300,100,values);
+var g = new Graph('graph',300,100,values);
+
+$(document).ready(function () {
+  $("#bin").on("change", function(){
+    updateRangeBar(g, this.value);
+  })
+});
 </script>
 <input id="bin" type="range" value="10" min="1" max="20" step="1">
 </body>
